--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "website",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.9",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.13",
-    "@types/react": "17.0.38",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.9",
-    "typescript": "4.5.5"
-  }
+    "name": "website",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "next": "12.0.9",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "styled-components": "^5.3.6"
+    },
+    "devDependencies": {
+        "@types/node": "17.0.13",
+        "@types/react": "17.0.38",
+        "@types/styled-components": "^5.1.26",
+        "@typescript-eslint/eslint-plugin": "^5.38.1",
+        "babel-plugin-styled-components": "^2.0.7",
+        "babel-preset-next": "^1.4.0",
+        "eslint": "^8.24.0",
+        "eslint-config-next": "^12.3.1",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "prettier": "^2.7.1",
+        "typescript": "4.5.5"
+    }
 }
